recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:3: error: not enough arguments for method subtree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters steps, length, angle, ...
 subtree()
        ^